fix: adjust slider position in switch component for better alignment

--- a/app/components/switch/switch.module.scss
+++ b/app/components/switch/switch.module.scss
@@ -42,6 +42,7 @@
 		position: relative;
 		transition: background 0.4s ease;
 		margin-right: 8px;
+		top: -1px;
 
 		&:before {
 			content: "";
